@@ -1,9 +1,16 @@
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 public class Consulta {
+
     public static List<Produto> obterLivrosDoPedido(Pedido pedido) {
-        return pedido.getProdutos().stream()
-                .filter(produto -> produto.getCategoria().equals(CategoriaProduto.LIVRO))
-                .toList();
+        List<Produto> produtos = pedido.getProdutos().stream()
+                .filter(produto -> produto.getCategoria().name() == CategoriaProduto.LIVRO.toString())
+                .collect(Collectors.toList());
+
+        return produtos;
+
     }
 }
